Fixed spacing between main menu buttons

--- a/src/styles/menu.css
+++ b/src/styles/menu.css
@@ -104,6 +104,7 @@
     border: none;
     border-radius: 5px;
     transition: background-color 0.3s;
+    margin-left: 25px;
 }
 
 #how-to-play-button:hover {
